--- a/korean/include/policy_popup.html
+++ b/korean/include/policy_popup.html
@@ -24,15 +24,18 @@
                 <li><a href="#policy01">가. 수집하는 개인정보 항목 및 수집방법</a></li>
                 <li><a href="#policy02">나. 개인정보의 수집 및 이용목적</a></li>
                 <li><a href="#policy03">다. 수집한 개인정보의 공유 및 제공</a></li>
-                <li><a href="#policy04">라. 개인정보처리 위탁</a></li>
+                <li><a href="#policy04">라. 개인정보취급 위탁</a></li><!--190814-->
                 <li><a href="#policy05">마. 수집한 개인정보의 보유 및 이용기간</a></li>
                 <li><a href="#policy06">바. 개인정보의 파기절차 및 방법</a></li>
                 <li><a href="#policy07">사. 이용자 및 법정대리인의 권리와 그 행사방법</a></li>
-                <li><a href="#policy08">아. 개인정보 자동 수집 장치의 설치․운영 및 그 거부에 관한 사항</a></li>
-                <li><a href="#policy09">자. 개인정보의 기술 및 관리적 보호 대책</a></li>
-                <li><a href="#policy10">차. 개인정보 관리책임자 및 담당자의 소속-성명 및 연락처 </a></li>
+                <li><a href="#policy08">아. 개인정보의 열람, 정정, 삭제, 동의 철회 절차</a></li><!--190814-->
+                <li><a href="#policy09">자. 개인정보 자동 수집 장치의 설치 운영 및 그 거부에 관한 사항</a></li><!--190814-->
+                <li><a href="#policy10">차. 개인정보의 기술 및 관리적 보호 대책 </a></li><!--190814-->
+                <li><a href="#policy11">카. 권익침해 구제방법 </a></li><!--190814-->
+                <li><a href="#policy12">타. 개인정보 보호 책임자 </a></li><!--190814-->
             </ul>
         </div>
+        
         <div class="policyCon"><!--160906-->
         	<a name="policy01"><h3>가. 수집하는 개인정보 항목 및 수집방법</h3></a>
             <p>NICE정보통신은 회원가입, 상담, 서비스 신청 등을 위해 아래와 같은 개인정보를 수집하고 있습니다.</p>
@@ -48,14 +51,14 @@
                 	<th>선택 항목</th>
                 </tr>
 				<tr>
-                	<td>NICE VAN 서비스</td>
+                	<td>NICE VAN 서비스<br />( 신용카드중계서비스, 현금영수증중계서비스 등)</td><!--190814-->
                 	<td>
                     	<dl>
-                        	<dt>	① 개인식별정보</dt>
-                        	<dd>성명, 생년월일, 로그인ID, 비밀번호</dd>
-                        	<dt>	② 가맹점 정보</dt>
-                        	<dd>상호명, 사업자등록번호, 업태, 종목, 사업장주소, 연락처, 영업개시일</dd>
-                        	<dt>	③ 거래정보</dt>
+                        	<dt>① 개인식별정보</dt>
+                        	<dd>성명, 생년월일, 로그인ID, 비밀번호, 고유식별정보, 신용카드번호 , 휴대전화번호</dd><!--190814-->
+                        	<dt>② 가맹점 정보</dt>
+                        	<dd>상호명, 사업자등록번호, 업태, 종목, 사업장주소, 연락처, 영업개시일</dd><!--190814-->
+                        	<dt>③ 거래정보</dt>
                         	<dd>매출정보(신용, 체크, 직불, 상품권, 현금, 현금IC 등), 멤버십(통신사 멤버십 등) 거래내역</dd>
                         </dl>
                     </td>
@@ -195,19 +198,14 @@
                     <td></td>
                 </tr>
                 <tr>
+                    <!--190814-->
                 	<td>나이스 택스프리</td>
                 	<td>
                     	<dl>
-                        	<dt>	①	개인식별정보 </dt>
+                        	<dt>① 개인식별정보 </dt>
 							<dd>성명, 생년월일, 로그인ID, 비밀번호, 휴대폰번호, 여권번호,여권만기일, 국적, 성별, 이메일주소</dd>
 							<dt>② 환급 업무 시 수집 개인정보</dt>
-							<dd>1) 필수 항목<br />
-                                 성, 이름, 여권번호, 국적, 생년월일, 여권만기일, 성별<br />
-                                2) 선택항목<br />
-                                신용카드정보 : 신용카드 고객명, 해외카드브랜드, 카드번호, 유효기간, CSC<br />
-                                우편환전정보 : 수신인명, 국가, 주소, 연락처
-                                알리페이 ID
-                            </dd>
+							<dd>성, 이름, 여권번호, 국적, 생년월일, 여권만기일, 성별</dd>
 							<dt>③ 가맹점 정보</dt>
 							<dd>상호명, 사업자등록번호, 업태, 종목, 사업장주소, 연락처, 계약 기간</dd>
 							<dt>④ 거래정보</dt>
@@ -215,7 +213,16 @@
                             <dt>⑤ 입금/정산정보 :계좌번호, 예금주 명 등</dt>
                         </dl>
                     </td>
-                    <td></td>
+                    <td>
+                        <dl>
+                        	<dt>① 신용카드정보 </dt>
+							<dd>신용카드 고객명, 해외카드브랜드, 카드번호, 유효기간, CSC</dd>
+							<dt>② 우편환전정보</dt>
+							<dd>수신인명, 국가, 주소, 연락처</dd>
+							<dt>③ 알리페이 ID</dt>
+                        </dl>
+                    </td>
+                    <!--190814-->
                 </tr>
                </table>
             <p class="mt10">또한 서비스 이용과정이나 서비스 처리 과정에서 아래와 같은 정보들이 자동 또는 수동으로 생성되어 수집될 수 있습니다.
@@ -285,8 +292,8 @@
                 </tr>
                 <tr>
                 	<td>나이스 택스프리</td>
-                	<td>KTIS, CUBE, KICC, GTF</td>
-                	<td>환급대행을 위한 여권정보, 거래정보</td>
+                	<td>한국정보통신㈜, 글로벌택스프리㈜, ㈜케이아이에스, ㈜큐브리펀드</td><!--190814-->
+                	<td>환급대행을 위한 여권정보, 거래정보</td><!--190814-->
                 </tr>
             </table>
         </div>
@@ -312,8 +319,12 @@
                 </tr>
                 <tr>
                 	<td>가맹점의 신용카드, 현금영수증 입금정산 및 유지보수</td>
-                	<td>㈜나스텍, ㈜한우리, ㈜프레피스코리아</td>
-                </tr><!--160906-->
+                	<td>㈜나스텍, ㈜한우리, ㈜프레피스코리아, ㈜가온, ㈜해드림 , ㈜거성 IT, ㈜인성데이터 , ㈜티모넷 , 트라이언소프트㈜ , KIS 정보통신㈜</td>
+                </tr><!--190814-->
+                <tr>
+                	<td>가맹점 매입업무 처리</td>
+                	<td>㈜제이티넷, KIS 정보통신㈜ , 한국정보통신㈜ , 퍼스트데이타코리아(유), 한국신용카드결제 ㈜</td>
+                </tr><!--190814-->
                 <tr>
                 	<td>I-PIN 본인확인 및 휴대폰본인확인서비스(성명, 성별, 생년월일, 내외국인, 휴대폰번호, 이통사)</td>
                 	<td>NICE평가정보㈜</td>
@@ -325,7 +336,7 @@
 				<tr>
                 	<td>가맹점 모집, 매출전표 수거</td>
                 	<td>대리점<br>
-						<a href="branch_popup.html" target="_blank"><u><strong>대리점 상세 리스트 보기</strong></u></a>
+						<a href="branch_popup.html" target="_blank"><u><strong>대리점 상세 리스트 및 연락처는 링크 참조</strong></u></a>
 					</td>
                 </tr><!--181003-->
 				<tr>
@@ -487,7 +498,7 @@
         </div><!-- 181003 -->
  
  		<div class="policyCon">
-            <a name="policy08"><h3>자. 개인정보의 자동 수집 장치의 설치․운영 및 그 거부에 관한 사항</h3></a>
+            <a name="policy09"><h3>자. 개인정보의 자동 수집 장치의 설치․운영 및 그 거부에 관한 사항</h3></a>
             <p>NICE정보통신은 귀하의 정보를 수시로 저장하고 찾아내는 ‘쿠키(cookie)’를 사용합니다.<br>
 			쿠키란 NICE정보통신의 웹사이트를 운영하는데 이용되는 서버가 귀하의 브라우저에 보내는 아주 작은 텍스트 파일로서 귀하의 컴퓨터 하드디스크에 저장됩니다.<br>
 			NICE정보통신은 다음과 같은 목적을 위해 쿠키 등을 사용합니다. 
@@ -509,7 +520,7 @@
         </div>
         
         <div class="policyCon">
-            <a name="policy09"><h3> 차. 개인정보의 기술 및 관리적 보호 대책</h3></a>
+            <a name="policy10"><h3> 차. 개인정보의 기술 및 관리적 보호 대책</h3></a>
             <p>NICE정보통신은 이용자들의 개인정보를 처리함에 있어 개인정보가 분실, 도난, 유출, 위조, 변조 또는 훼손을 방지하고 개인정보의 안전성 확보를 위하여 다음과 같은 기술적/관리적 대책을 강구하고 있습니다. </p>
             <dl class="buList4 mt20">
                 <dt>기술적 대책</dt>
@@ -548,7 +559,7 @@
         </div>
         
 		<div class="policyCon">
-            <a name="policy09"><h3>카. 권익침해 구제방법</h3></a>
+            <a name="policy11"><h3>카. 권익침해 구제방법</h3></a>
             <p>귀하는 아래의 기관에 대해 개인정보 침해에 대한 피해구제, 상담 등을 문의하실 수 있습니다. 아래의 기관은 NICE정보통신과는 별개의 기관으로서, NICE정보통신의 자체적인 개인정보 불만처리, 피해구제 결과에 만족하지 못하시거나 보다 자세한 도움이 필요하시면 문의하여 주시기 바랍니다. </p>
             <dl class="buList4 mt20">
                 <dt>개인정보 침해신고센터(한국인터넷진흥원 운영)</dt>
@@ -557,33 +568,35 @@
                         <li>소관업무 : 개인정보 침해사실 신고, 상담 신청</li>
                         <li>홈페이지 : <a href="http://privacy.kisa.or.kr" target="_blank">privacy.kisa.or.kr</a></li>
                         <li>전화 : (국번없이)118</li>
-                        <li>주소 : (138-950서울시 송파구 중대로 135 한국인터넷진흥원 개인정보침해신고센터</li>
+                        <li>주소 : (58324) 전남 나주시 진흥길 9(빛가람동 301-2) 3층 개인정보침해 신고센터</li>
                     </ul>
                 </dd>
                 <dt>개인정보 분쟁조정위원회(한국인터넷진흥원 운영)</dt>
                 <dd class="mb15">
                     <ul class="buList2">
                         <li>소관업무 : 개인정보 분쟁조정신청, 집단분쟁조정(민사적 해결)</li>
-                        <li>홈페이지 : <a href="http://privacy.kisa.or.kr" target="_blank">privacy.kisa.or.kr</a></li>
-                        <li>전화 : (국번없이)118</li>
-                        <li>주소 : (138-950)서울시 송파구 중대로 135 한국인터넷진흥원 개인정보침해신고센터</li>
+                        <li>홈페이지 : <a href="http://www.kopico.go.kr" target="_blank">www.kopico.go.kr</a></li>
+                        <li>전화 : 02)1833-6972</li>
+                        <li>주소 : (03171) 서울 종로구 세종대로 209 정부서울청사 4층</li>
+                        <li>대검찰청 사이버수사과 : (국번없이) 1301 (<a href="http://www.spo.go.kr" target="_blank">www.spo.go.kr</a>)</li>
+                        <li>경찰청 사이버안전국 : (국번없이) 182 (<a href="http://cyberbureau.police.go.kr" target="_blank">cyberbureau.police.go.kr</a>)</li>
                     </ul>
                 </dd>
-				<dt>대검찰청 사이버범죄수사단</dt>
+				<!--<dt>대검찰청 사이버범죄수사단</dt>
                 <dd class="mb15">
                     02-3480-2000(<a href="http://www.spo.go.kr" target="_blank">www.spo.go.kr</a>, <a href="mailto:cybercid@spo.go.kr" target="_blank">cybercid@spo.go.kr</a>)
                 </dd>
 				<dt>경찰청 사이버안전국</dt>
                 <dd class="mb15">
                     182(<a href="http://www.netan.go.kr" target="_blank">www.netan.go.kr</a>)
-                </dd>
+                </dd>-->
             </dl>
 			<p>또한, 개인정보의 열람, 정정·삭제, 처리정지 등에 대한 정보주체자의 요구에 대하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익을 침해 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.</p>
 			<p class="mt10">☞ 중앙행정심판위원회(<a href="http://www.simpan.go.kr" target="_blank">www.simpan.go.kr</a>)의 전화번호 안내 참조</p>
         </div><!-- 181003 -->
         
         <div class="policyCon">
-        	<a name="policy10"><h3>타. 개인정보 보호 책임자</h3></a><!--161103-->
+        	<a name="policy12"><h3>타. 개인정보 보호 책임자</h3></a><!--161103-->
             <p>NICE정보통신은 고객의 개인정보를 보호하고 개인정보와 관련한 불만을 처리하기 위하여 아래와 같이 관련 부서 및 개인정보보호책임자를 지정하고 있습니다. </p>
             <dl class="buList4 mt20">
             	<dt>개인정보보호책임자</dt>
