--- a/korean/include/policy_popup.html
+++ b/korean/include/policy_popup.html
@@ -653,7 +653,7 @@
         </div> // 181003 -->
         <div class="policyCon mb30"><!--161103-->
         	<p>현 개인정보 처리방침의 내용 추가, 삭제 및 수정이 있을 경우에는 개정 최소 7일 전부터 회사 홈페이지의 공지사항을 통해 고지합니다.</p>
-       		<p>공고일자 : 2019년 00월 00일<br>시행일자 : 2019년 00월 00일</p>
+       		<p>공고일자 : 2019. 08. 19.<br>게시일자 : 2019. 08. 26.</p>
 			<p><a href="../include/policy_popup_past05.html" target="_blacnk" class="bold">이전 개인정보처리방침 보기</a></p><!--2016.11.03-->
         </div>
         
