--- a/korean/include/policy_popup_past07.html
+++ b/korean/include/policy_popup_past07.html
@@ -602,9 +602,9 @@
             	<dt>개인정보보호책임자</dt>
                 <dd class="mb15">
                 	<ul class="buList2">
-                    	<li>성명 : 심우배</li>
-                    	<li>소속 : 경영전략본부 경영기획파트</li>
-                    	<li>직위 : 상무보</li>
+                    	<li>성명 : 조대민</li>
+                    	<li>소속 : 기획관리본부</li>
+                    	<li>직위 : 상무</li>
                     	<li>전화번호 : 02-2187-2700</li>
                     	<li>이메일 : <a href="mailto:help@nicevan.co.kr" target="_blank">help@nicevan.co.kr</a></li>
                     </ul>
@@ -612,9 +612,9 @@
             	<dt>개인정보담당부서</dt>
                 <dd class="mb15">
                 	<ul class="buList2">
-                    	<li>부서명 : 경영전략본부 경영기획파트</li>
+                    	<li>부서명 : 기획관리본부</li>
                     	<li>담당자 : 한서희</li>
-                    	<li>직위 : 과장</li>
+                    	<li>직위 : 대리</li>
                     	<li>전화번호 : 02-2187-2700</li>
                     	<li>이메일 : <a href="mailto:help@nicevan.co.kr" target="_blank">help@nicevan.co.kr</a></li>
                     </ul>
@@ -653,8 +653,8 @@
         </div> // 181003 -->
         <div class="policyCon mb30"><!--161103-->
         	<p>현 개인정보 처리방침의 내용 추가, 삭제 및 수정이 있을 경우에는 개정 최소 7일 전부터 회사 홈페이지의 공지사항을 통해 고지합니다.</p>
-       		<p>공고일자 : 2020. 02. 21.<br>게시일자 : 2020. 03. 21.</p>
-			<p><a href="../include/policy_popup_past07.html" target="_blacnk" class="bold">이전 개인정보처리방침 보기</a></p><!--2016.11.03-->
+       		<p>공고일자 : 2019. 08. 19.<br>게시일자 : 2019. 08. 26.</p>
+			<p><a href="../include/policy_popup_past06.html" target="_blacnk" class="bold">이전 개인정보처리방침 보기</a></p><!--2016.11.03-->
         </div>
         
      </div>
