--- a/korean/include/policy_popup_past08.html
+++ b/korean/include/policy_popup_past08.html
@@ -69,9 +69,9 @@
                 	<td>
                     	<dl>
                         	<dt>	① 개인식별정보</dt>
-                        	<dd>성명, 생년월일, 로그인ID, 비밀번호, 이메일 주소, 휴대폰 번호</dd>
+                        	<dd>성명, 생년월일, 로그인ID, 비밀번호</dd>
                         	<dt>	② 가맹점 정보</dt>
-                        	<dd>상호명, 사업자등록번호, 업태, 종목, 사업장주소, 연락처, 영업개시일, 계좌번호</dd>
+                        	<dd>상호명, 사업자등록번호, 업태, 종목, 사업장주소, 연락처, 영업개시일</dd>
                         	<dt>	③ 거래정보</dt>
                         	<dd>매출정보(신용, 체크, 직불, 상품권, 현금, 현금IC 등), 멤버십(통신사 멤버십 등) 거래내역</dd>
                         </dl>
@@ -653,8 +653,8 @@
         </div> // 181003 -->
         <div class="policyCon mb30"><!--161103-->
         	<p>현 개인정보 처리방침의 내용 추가, 삭제 및 수정이 있을 경우에는 개정 최소 7일 전부터 회사 홈페이지의 공지사항을 통해 고지합니다.</p>
-       		<p>공고일자 : 2020. 04. 03.<br>게시일자 : 2020. 05. 02.</p>
-			<p><a href="../include/policy_popup_past08.html" target="_blacnk" class="bold">이전 개인정보처리방침 보기</a></p><!--2016.11.03-->
+       		<p>공고일자 : 2020. 02. 21.<br>게시일자 : 2020. 03. 21.</p>
+			<p><a href="../include/policy_popup_past07.html" target="_blacnk" class="bold">이전 개인정보처리방침 보기</a></p><!--2016.11.03-->
         </div>
         
      </div>
