--- a/korean/include/policy_popup_past09.html
+++ b/korean/include/policy_popup_past09.html
@@ -224,26 +224,6 @@
                     </td>
                     <!--190814-->
                 </tr>
-                <tr>
-                    <!--200514-->
-                	<td>고향사랑페이</td>
-                	<td>
-                    	<dl>
-                        	<dt>① 지자체 지역화폐 서비스 및 공공정책 자료활용</dt>
-							<dd>성명, 생년월일, 성별, 내국인/외국인, 휴대전화번호, 이동통신사 정보, 식별번호(CI), 디바이스고유값, 사업자등록번호, 대표자명</dd>
-							<dt>② 고향사랑페이 서비스 - 회원가입 시</dt>
-							<dd>성명, 생년월일, 성별, 내국인/외국인, 휴대전화번호, 이메일주소, 비밀번호, 단말기 정보(단말기 모델, 이동통신사 정보), 본인확인값(CI, DI), 사업자등록번호, 대표자명</dd>
-							<dt>③ 고향사랑페이 서비스 - 서비스 이용, 처리과정 시</dt>
-							<dd>서비스 이용기록, 접속 로그, 쿠키, 접속 IP 정보, MAC 주소, 운영체제 종류 및 버전 정보, 기기 정보, 회원 계좌정보(은행명, 계좌번호, 예금주성명), 이용자 위치정보, 본인확인값(CI, DI), 주소(카드배송용)</dd>
-							<dt>④ 고향사랑페이 서비스 - 충전, 결제, 환불과정 시</dt>
-							<dd>가맹점명, 단말기 정보, 카드정보(카드번호, CVC 번호, 유효기간, 최근 거래내역, 보유잔액), 계좌정보(은행명, 계좌번호, 예금주성명)</dd>
-                            <dt>⑤ 지자체 지역화폐 발급, 카드 거래승인 중계, 가맹점대금 정산 시</dt>
-                            <dd>본인확인값(CI, DI), 지역화폐 보유잔액</dd>
-                        </dl>
-                    </td>
-                    <td></td>
-                    <!--200514-->
-                </tr>
                </table>
             <p class="mt10">또한 서비스 이용과정이나 서비스 처리 과정에서 아래와 같은 정보들이 자동 또는 수동으로 생성되어 수집될 수 있습니다.
             <br/>※ 이용자 ip주소, 서비스 접속 일시, 서비스 이용기록, 불량 혹은 비정상 이용기록, 결제기록 등</p>
@@ -298,7 +278,7 @@
                 	<td>신용카드 결제</td>
                 	<td>전 카드사, 직불카드 및 현금IC 처리 전 은행, ㈜한국스마트카드, (사)금융결제원, 부가통신사업자(VAN) 등</td>
                 	<td>거래정보</td>
-                	<td rowspan="5">5년</td>
+                	<td rowspan="4">5년</td>
                 </tr><!--160906-->
                 <tr>
                 	<td>멤버쉽 서비스</td>
@@ -314,11 +294,6 @@
                 	<td>나이스 택스프리</td>
                 	<td>한국정보통신㈜, 글로벌택스프리㈜, ㈜케이아이에스, ㈜큐브리펀드</td><!--190814-->
                 	<td>환급대행을 위한 여권정보, 거래정보</td><!--190814-->
-                </tr>
-                <tr>
-                	<td>고향사랑페이</td>
-                	<td>서비스 도입 지자체</td><!--200514-->
-                	<td>이름, 생년월일, 성별, 휴대전화번호, 이메일주소, 이동통신사 구분정보, 동일인 식별번호(CI), 내∙외국인 구분정보, 디바이스 고유값, 사업자등록번호, 대표자명</td><!--200514-->
                 </tr>
             </table>
         </div>
@@ -340,7 +315,7 @@
                 <tr>
                 	<td>신용카드 매출전표 보관업무</td>
                 	<td>통인안전보관㈜</td>
-                	<td rowspan="11">회원 탈퇴 시 혹은 위탁 계약 종료 시까지</td>
+                	<td rowspan="7">회원 탈퇴 시 혹은 위탁 계약 종료 시까지</td>
                 </tr>
                 <tr>
                 	<td>가맹점의 신용카드, 현금영수증 입금정산 및 유지보수</td>
@@ -372,18 +347,6 @@
                 	<td>POS 관련 고객상담업무</td>
                 	<td>OK POS</td>
                 </tr><!--181003-->
-                <tr>
-                	<td>고향사랑페이 선불 충전</td>
-                	<td>세틀뱅크㈜</td>
-                </tr><!--200514-->
-                <tr>
-                	<td>고향사랑페이 선불 충전</td>
-                	<td>금융결제원</td>
-                </tr><!--200514-->
-                <tr>
-                	<td>고향사랑페이 고객상담업무</td>
-                	<td>NICE신용정보㈜</td>
-                </tr><!--200514-->
             </table>
         </div>
         
@@ -466,29 +429,6 @@
                     	<li>보존 기간 : 5년</li>
                     </ul>
                 </dd>
-                <!-- 200515 -->
-                <dt>홈페이지 방문기록</dt>
-                <dd class="mb15">
-                	<ul class="buList2">
-                    	<li>보존 근거: 통신비밀보호법</li>
-                    	<li>보존 기간: 3개월</li>
-                    </ul>
-                </dd>
-                <dt>본인확인에 관한 기록</dt>
-                <dd class="mb15">
-                	<ul class="buList2">
-                    	<li>보존 근거: 정보통신망 이용촉진 및 정보보호 등에 관한 법률</li>
-                    	<li>보존 기간: 6개월</li>
-                    </ul>
-                </dd>
-                <dt>개인위치정보에 관한 기록</dt>
-                <dd class="mb15">
-                	<ul class="buList2">
-                    	<li>보존 근거: 위치정보의 보호 및 이용 등에 관한 법률</li>
-                    	<li>보존 기간: 6개월 </li>
-                    </ul>
-                </dd>
-                <!-- 200515 -->
             </dl>
         </div>
         
@@ -713,8 +653,8 @@
         </div> // 181003 -->
         <div class="policyCon mb30"><!--161103-->
         	<p>현 개인정보 처리방침의 내용 추가, 삭제 및 수정이 있을 경우에는 개정 최소 7일 전부터 회사 홈페이지의 공지사항을 통해 고지합니다.</p>
-       		<p>공고일자 : 2020. 05. 19.<br>시행일자 : 2020. 06. 18.</p>
-			<p><a href="../include/policy_popup_past09.html" target="_blacnk" class="bold">이전 개인정보처리방침 보기</a></p><!--2016.11.03-->
+       		<p>공고일자 : 2020. 04. 03.<br>게시일자 : 2020. 05. 02.</p>
+			<p><a href="../include/policy_popup_past08.html" target="_blacnk" class="bold">이전 개인정보처리방침 보기</a></p><!--2016.11.03-->
         </div>
         
      </div>
